--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
 saved_models/*
 .idea/*
+
+# Jupyter Notebook
 notebooks/.ipynb_checkpoints/*
