--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,20 @@
-absl-py==0.5.0
-astor==0.7.1
 bleach==1.5.0
-certifi==2018.8.24
-cycler==0.10.0
+certifi==2018.11.29
 enum34==1.1.6
-gast==0.2.0
-grpcio==1.15.0
-h5py==2.8.0
 html5lib==0.9999999
 Keras==2.2.4
-Keras-Applications==1.0.6
-Keras-Preprocessing==1.0.5
-kiwisolver==1.0.1
 Markdown==3.0.1
-matplotlib==3.0.0
-mkl-fft==1.0.6
-mkl-random==1.0.1
-numpy==1.15.2
+numpy==1.15.4
 pandas==0.23.4
 protobuf==3.6.1
-pyparsing==2.2.2
-python-dateutil==2.7.3
-pytz==2018.5
-PyYAML==3.13
-scipy==1.1.0
-seaborn==0.9.0
-six==1.11.0
-tensorboard==1.11.0
+python-dateutil==2.7.5
+pytz==2018.9
+scikit-learn==0.20.2
+scipy==1.2.0
+six==1.12.0
+sklearn==0.0
+statsmodels==0.9.0
 tensorflow-gpu==1.4.0
 tensorflow-tensorboard==0.4.0
-termcolor==1.1.0
 Werkzeug==0.14.1
 wincertstore==0.2
